--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.23.1",
-    "discord.js": "^13.1.0"
+    "discord.js": "^13.1.0",
+    "nekos.life": "^2.0.7"
   },
   "engines": {
     "node": "16.x"
