--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
-    "nekos.life": "^2.0.7"
+    "nekos.life": "^2.0.7",
+    "node-fetch": "^3.0.0",
+    "snoowrap": "^1.23.0"
   },
   "engines": {
     "node": "16.x"
