--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "mathjs": "^9.5.1",
     "nekos.life": "^2.0.7",
     "node-fetch": "^3.0.0",
     "snoowrap": "^1.23.0"
