--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a package",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node deploy.js && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +25,11 @@
     "dotenv": "^10.0.0",
     "mathjs": "^9.5.1",
     "nekos.life": "^2.0.7",
-    "node-fetch": "^3.0.0",
-    "snoowrap": "^1.23.0"
+    "snoowrap": "^1.23.0",
+    "ytdl-core": "^4.9.1",
+    "zxcvbn": "^4.4.2"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.x"
   }
 }
